# python-code-quality-analyzer

./: .coverage  .gitignore  .release-master.yaml  CHANGELOG.md  Dockerfile.test  analyze_versions.sh  pyproject.toml  pytest.ini  release.sh  requirements-dev.txt  requirements.txt  run_docker_tests.sh  setup.py  test_package.sh  validate-against.yaml
.github/workflows/: release.yml
code_analyzer/: __main__.py
code_analyzer/analyzers/: __init__.py  base_analyzer.py  complexity.py
code_analyzer/commands/: analyze.py  command_registry.py
code_analyzer/config/: __init__.py  config_loader.py  default_config.yaml
code_analyzer/formatters/: base_formatter.py  console.py
docs/: CHANGELOG.md  README.md
docs/architecture/: origin.txt  purpose.txt  v0.1.0-architecture.md
docs/guides/: CONTRIBUTING.md  ONBOARDING.md
docs/plans/: v0.1.0-refactoring-plan.txt  v0.2.0-roadmap.md  v0.3.0-dead-code-detection.md  v0.4.0-code-similarity.md  v0.5.0-quality-metrics.md  v0.6.0-architecture-analysis.md
ops/: publish.sh  release.sh  test_docker.sh  test_quality.sh  workflow-process.txt
ops/release/: build.sh  git.sh  publish.sh  release.sh.old  utils.sh  validate.sh  version.sh
ops/test/: unit.sh
reports/code_analysis/: architecture.json  complexity.json  quality.json
scripts/: benchmark_analyzer.py  validate_projects.py
src/code_analyzer/: __init__.py
tests/: __init__.py
tests/integration/: test_cli.py
tests/unit/: test_main.py
tests/unit/analyzers/: test_base_analyzer.py  test_complexity_analyzer.py
tests/unit/config/: test_config_loader.py
(+1 files in other folders)
